# beebem-1

./: Makefile  README  STARCOMM.IMG  config.h  config.status  configure.ac  reconf
data/: Makefile  Makefile.am
doc/: Makefile
m4/: Makefile
src/: Makefile  Makefile.am  beebem  beebem_pages.cpp.rej  beebmem.cpp  beebsound.cpp  beebwin.cpp  beebwin.h  cregistry.h  disc1770.cpp  disc8271.cpp  main.h  sasi.cpp  scsi.cpp  sdl.cpp.rej  serial.cpp  speech.cpp  teletext.cpp  tube.cpp  uefstate.cpp  userkybd.cpp  uservia.cpp  video.cpp  z80.cpp  z80_support.cpp  z80dis.cpp
src/.deps/: 6502core.Po  atodconv.Po  avi.Po  beebem_pages.Po  beebem_pages_disks.Po  beebmem.Po  beebsound.Po  beebwin.Po  cregistry.Po  csw.Po  debug.Po  disc1770.Po  disc8271.Po  econet.Po  fake_registry.Po  hardware.Po  i386dasm.Po  i86.Po  log.Po  main.Po  sasi.Po  scsi.Po  sdl.Po  serial.Po  serialdevices.Po  speech.Po  sysvia.Po  teletext.Po  tube.Po  uef.Po  uefstate.Po  user_config.Po  userkybd.Po  uservia.Po  via.Po  video.Po  windows.Po  z80.Po  z80_support.Po  z80dis.Po
src/gui/: Makefile  Makefile.am
src/gui/.deps/: box.Po  button.Po  functions.Po  label.Po  log.Po  messagebox.Po  progressbar.Po  radiobutton.Po  radiogroup.Po  sdl.Po  slidebar.Po  tabgroup.Po  tabpage.Po  tickbox.Po  togglebutton.Po  widget.Po  widget_shared.Po  window.Po
src/posix/: Makefile.am  cregistry.cpp
src/test/: Makefile.am
src/test/cregtest/: Makefile.am  cregtest.cpp
src/win/: cregistry.cpp
